appId: com.corentinkittel.arozvit
---
- launchApp
# - openLink: exp://192.168.1.11:8081

- extendedWaitUntil:
    visible:
      id: "google-oauth-button"
- tapOn:
    retryTapIfNoChange: false
    id: "google-oauth-button"
- runFlow:
    when:
      visible:
        id: "com.android.chrome:id/terms_accept"
    commands:
      - tapOn:
          id: "com.android.chrome:id/terms_accept"
      - tapOn: "No thanks"
      - tapOn:
          id: "identifierId"
      - inputText: ${MAESTRO_EMAIL}
      - pressKey: Enter
      - inputText: ${MAESTRO_PASSWORD}
      - pressKey: Enter
      - tapOn: "Continue"
- runFlow:
    when:
      visible: "Choose an account"
    commands:
      - tapOn:
          point: "50%,44%"
      - tapOn: "Continue"
- runFlow:
    when:
      notVisible: ${MAESTRO_EMAIL}
      visible:
        id: "identifierId"
    commands:
      - tapOn:
          id: "identifierId"
      - inputText: ${MAESTRO_EMAIL}
      - pressKey: Enter
      - inputText: ${MAESTRO_PASSWORD}
      - pressKey: Enter
      - tapOn: "Continue"
