appId: com.corentinkittel.planty
---
- launchApp
# - openLink: exp://192.168.1.11:8081
- waitForAnimationToEnd:
    timeout: 10000
- tapOn:
    id: "apple-oauth-button"
- assertVisible:
    id: "account_name_text_field"
- tapOn:
    id: "com.android.chrome:id/close_button"
- tapOn:
    id: "facebook-oauth-button"
- assertVisible:
    id: "m_login_email"
- tapOn:
    id: "com.android.chrome:id/close_button"
- tapOn:
    id: "google-oauth-button"
- assertVisible:
    id: "identifierId"
- tapOn:
    id: "com.android.chrome:id/close_button"
